# nauty-pet

./: Cargo.toml  Readme.md
benches/: benchmark.rs
src/: autom.rs  canon.rs  cmp.rs  error.rs  graph.rs  lib.rs  nauty_graph.rs  prelude.rs  sparse_graph.rs
testing/: Cargo.toml
testing/src/: lib.rs
