[package]
name = "nauty-pet"
version = "0.4.1"
edition = "2021"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Canonical graph labelling using nauty/Traces and petgraph"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["mathematics"]
repository = "https://github.com/a-maier/nauty-pet"

[dependencies]
ahash = "0.7"
itertools = "0.10"
nauty-Traces-sys = "0.2"
petgraph = "0.6"
thiserror = "1.0"

[features]
libc = ["nauty-Traces-sys/libc"]

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
testing = { path = "testing" }
nauty-pet = { path = ".", features = ["libc"] }

[[bench]]
name = "benchmark"
harness = false
