[package]
name = "nauty-pet"
version = "0.8.0"
edition = "2021"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Canonical graph labelling using nauty/Traces and petgraph"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["mathematics"]
repository = "https://github.com/a-maier/nauty-pet"

[dependencies]
ahash = "0.8"
indexmap = { version = "1.8", optional = true }
itertools = "0.10"
nauty-Traces-sys = "0.5"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[features]
serde-1 = ["petgraph/serde-1", "serde/derive"]
serde = ["serde-1"]
stable = ["indexmap"]

[dev-dependencies]
criterion = "0.4"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
rand_xoshiro = "0.6"
testing = { path = "testing" }

[[bench]]
name = "benchmark"
harness = false
