[package]
name = "nauty-pet"
version = "0.12.1"
edition = "2024"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
description = "Canonical graph labelling using nauty/Traces and petgraph"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["graph-algorithms"]
categories = ["mathematics"]
repository = "https://github.com/a-maier/nauty-pet"

[dependencies]
ahash = "0.8"
indexmap = { version = "2.7", optional = true }
itertools = "0.14"
nauty-Traces-sys = "0.9"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"

[features]
serde-1 = ["petgraph/serde-1", "serde/derive"]
serde = ["serde-1"]
stable = ["indexmap"]

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
rand_xoshiro = "0.7"
testing = { path = "testing" }

[[bench]]
name = "benchmark"
harness = false
